--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import "~bootstrap/scss/utilities/text";
 
 //plugins
+@import "~jquery-ui/themes/base/base.css";
 @import "~swiper/dist/css/swiper.min.css";
 
 /* Project style */
