--- a/src/scss/partials/_reset.scss
+++ b/src/scss/partials/_reset.scss
@@ -299,6 +299,10 @@ nav ol, nav ul, ol, ul {
   list-style: none;
 }
 
+iframe {
+  border: none;
+}
+
 ::selection {
   text-shadow: none;
   color: $text-color;
