--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,7 @@
 //plugins
 @import "~jquery-ui/themes/base/base.css";
 @import "~swiper/dist/css/swiper.min.css";
+@import "~nouislider/distribute/nouislider.min.css";
 
 /* Project style */
 //partials
