--- a/src/scss/layout/_content.scss
+++ b/src/scss/layout/_content.scss
@@ -2,6 +2,9 @@
 ********************* CONTENT ********************
 *************************************************/
 .content {
+ position:relative;
+ width: 100%;
+ height: 100%;
   order: 2;
   -webkit-order: 2;
   flex-grow: 1;
@@ -9,3 +12,74 @@
   min-width: 320px;
 }
 
+.main-slider {
+	position:absolute;
+	top: 0;
+	left:0;
+	width: 100%;
+	height: 680px;
+
+	.swiper-slide{
+   display: flex;
+	flex-flow: column wrap;
+   justify-content: center;
+   align-content: center;
+   align-items: center
+	} 
+	h1{color:#FFFFFF; font-size: 30px;
+		font-weight: 400;
+		line-height:35.4px;
+	margin-top: 95px;}
+	p{color:#FFFFFF; 
+	font-family:'Geometria';
+	font-weight:bolder;
+	font-size: 16px;line-height:26px;
+	margin-top: 15px;}
+   	
+	.first-slide::before {
+			content:'DALAS';
+			position: absolute;
+			font-size: 170px;
+			color: #282828;
+			
+		}	
+ 	.first-slide{
+	position: relative;
+	background: linear-gradient(102.57deg, #333333 30.83%, #3A3A3A 49.73%, #000000 100%);
+   img { margin-top: 224px;}
+	 }
+	.second-slide::before {
+			content:'NATURAL';
+			position: absolute;
+			font-size: 170px;
+			color: #F2F2F2;
+			opacity: 30%;
+			
+	}
+  .second-slide{
+	  position: relative;
+	  background: linear-gradient(102.57deg, #219653 30.83%, #27AE60 49.73%, #135730 100%);
+	  img {
+		  margin-top: 50px;
+	  }
+	  h1{margin-top: 0;}
+  }
+}
+.characteristic__section{
+	display: block;
+	position:absolute;
+	top:746px;
+	left:0;
+	
+}
+.characteristic__container{
+	display: flex;
+   flex-flow: row wrap;
+   justify-content: center;
+   align-content: center;
+   align-items: center;
+	
+	h2 {display:block;
+		font-size: 32px;
+		color: #3A3A3A;}
+	}
