--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,8 +4,26 @@
 header.header {
   order: 1;
   -webkit-order: 1;
-  position: relative;
+  position: absolute;
   min-width: 320px;
   width: 100%;
-  z-index: 100;
+  z-index: 3;
+  
+
+  .main-logo {
+	padding-top: 47px;
+	padding-left: 147px;
+	}
+} 
+
+.nav {
+	padding-top: 47px;
+	padding-right: 15%;
+
+		&-link {
+		font-size: 14px;
+		color: #FFFFFF;
+		line-height: 17px;
+	}
 }
+
