--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -9,7 +9,7 @@ $text-color: #333;
 $input-placeholder-color: #aaa;
 
 // fonts
-$font-family-base:'Venus', sans-serif;
+$font-family-base: 'Venus Rising', sans-serif;
 $font-family-custom: 'Arial', sans-serif;
 $font-family-unique: 'Times New Roman', serif;
 
