--- a/src/scss/layout/_content.scss
+++ b/src/scss/layout/_content.scss
@@ -2,84 +2,108 @@
 ********************* CONTENT ********************
 *************************************************/
 .content {
- position:relative;
- width: 100%;
- height: 100%;
-  order: 2;
-  -webkit-order: 2;
-  flex-grow: 1;
-  -webkit-flex-grow: 1;
-  min-width: 320px;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	order: 2;
+	-webkit-order: 2;
+	flex-grow: 1;
+	-webkit-flex-grow: 1;
+	min-width: 320px;
 }
 
 .main-slider {
-	position:absolute;
-	top: 0;
-	left:0;
 	width: 100%;
 	height: 680px;
-
-	.swiper-slide{
-   display: flex;
-	flex-flow: column wrap;
-   justify-content: center;
-   align-content: center;
-   align-items: center
-	} 
-	h1{color:#FFFFFF; font-size: 30px;
+	
+	.swiper-slide {
+		display: flex;
+		flex-flow: column wrap;
+		justify-content: center;
+		align-content: center;
+		align-items: center;
+		
+		picture {
+			position: relative;
+		}
+	}
+	h1 {
+		color: #ffffff;
+		font-size: 30px;
 		font-weight: 400;
-		line-height:35.4px;
-	margin-top: 95px;}
-	p{color:#FFFFFF; 
-	font-family:'Geometria';
-	font-weight:bolder;
-	font-size: 16px;line-height:26px;
-	margin-top: 15px;}
-   	
+		line-height: 35.4px;
+		margin-top: 95px;
+	}
+	p {
+		color: #ffffff;
+		font-family: "Geometria";/*добавить как шаблон*/
+		font-weight: bolder;
+		font-size: 16px;
+		line-height: 26px;
+		margin-top: 15px;
+	}
+
 	.first-slide::before {
-			content:'DALAS';
+		content: "dalas";
+		position: absolute;
+		font-size: 170px;
+		color: #282828;
+		text-transform: uppercase;
+	}
+	.first-slide {
+		position: relative;
+		background: linear-gradient(102.57deg, #333333 30.83%, #3a3a3a 49.73%, #000000 100%);
+		
+		img {
+			margin-top: 224px;
+		}
+	}
+
+	.second-slide {
+		position: relative;
+		background: linear-gradient(102.57deg, #219653 30.83%, #27ae60 49.73%, #135730 100%);
+		
+		&::before {
+			content: "NATURAL";
 			position: absolute;
 			font-size: 170px;
-			color: #282828;
-			
-		}	
- 	.first-slide{
-	position: relative;
-	background: linear-gradient(102.57deg, #333333 30.83%, #3A3A3A 49.73%, #000000 100%);
-   img { margin-top: 224px;}
-	 }
-	.second-slide::before {
-			content:'NATURAL';
-			position: absolute;
-			font-size: 170px;
-			color: #F2F2F2;
+			color: #f2f2f2;
 			opacity: 30%;
-			
+		}
+		
+		img {
+			margin-top: 50px;
+		}
+
+		h1 {
+			margin-top: 0;
+		}
 	}
-  .second-slide{
-	  position: relative;
-	  background: linear-gradient(102.57deg, #219653 30.83%, #27AE60 49.73%, #135730 100%);
-	  img {
-		  margin-top: 50px;
-	  }
-	  h1{margin-top: 0;}
-  }
 }
-.characteristic__section{
-	display: block;
-	position:absolute;
-	top:746px;
-	left:0;
-	
-}
-.characteristic__container{
+.title__container {
 	display: flex;
-   flex-flow: row wrap;
-   justify-content: center;
-   align-content: center;
-   align-items: center;
-	
-	h2 {display:block;
+	padding-top: 66px;
+	width: 100%;
+	flex-flow: column wrap;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
+
+	h2 {
 		font-size: 32px;
-		color: #3A3A3A;}
+		color: #3a3a3a;
 	}
+	h3{
+		font-size: 16px;
+		text-transform: uppercase;
+		text-align: center;
+	}
+	p{
+		font-family: 'Geometria';
+		text-align: center;
+		width: 312px;
+		height: 127px;
+		font-size: 16px;
+
+	}
+}
