--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -28,3 +28,17 @@ $transition-base: all .3s ease 0s;
 $enable-shadows: true;
 $body-color: $text-color;
 
+$grid-breakpoints: (
+        xs: 0,
+        sm: 576px,
+        md: 768px,
+        lg: 992px,
+        xl: 1220px,
+);
+
+$container-max-widths: (
+        sm: 540px,
+        md: 720px,
+        lg: 960px,
+        xl: 1146px,
+);
