--- a/src/scss/layout/_content.scss
+++ b/src/scss/layout/_content.scss
@@ -88,22 +88,31 @@
 	justify-content: center;
 	align-content: center;
 	align-items: center;
-
 	h2 {
 		font-size: 32px;
 		color: #3a3a3a;
 	}
+}
+.title__column{
+	align-content: center;
+	align-items: center;
+
 	h3{
 		font-size: 16px;
 		text-transform: uppercase;
-		text-align: center;
+		color: #A5853F;
+		max-width: 312px;
+		max-height: 127px;
+	   text-align: center;
+		margin-top: 99px;
+		margin-bottom: 34px;
 	}
 	p{
 		font-family: 'Geometria';
-		text-align: center;
-		width: 312px;
-		height: 127px;
+		color:#000000;
+		font-weight:bold;
 		font-size: 16px;
-
+		max-width: 312px;
+		max-height: 127px;
 	}
 }
